// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading renders correctly 1`] = `
.c0 {
  background-color: #fff;
  padding: 16px;
  border-bottom: 1px solid #eceff1;
}

@media (min-width:62em) {
  .c0 {
    background-color: transparent;
    padding: 0;
    border-bottom: 0;
  }
}

<div
  class="MuiGrid-root c0"
  theme="[object Object]"
/>
`;

exports[`HeadingRow renders correctly with highlight 1`] = `
.c6 {
  border-radius: 1rem;
  padding: 0.2rem 0.75rem;
  background-color: #546e7a;
  margin-right: 0.5rem;
  color: #eceff1;
}

.c6:last-child {
  margin-right: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  line-height: 1;
  margin: 8px 0;
}

.c0 {
  padding: 16px;
  border-bottom: 1px solid;
}

.c3 {
  margin-left: 0.25rem;
}

.c1 {
  margin-bottom: 8px;
}

.c2 {
  max-width: 100%;
  max-height: 100%;
  margin: auto;
}

@media (min-width:62em) {
  .c5 {
    margin: 0;
  }
}

@media (min-width:62em) {
  .c0 {
    background-color: transparent;
    padding: 0;
    border-bottom: 0;
  }
}

@media (min-width:62em) {
  .c1 {
    background-color: white;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding: 4px;
    margin-right: 16px;
    margin-left: 12px;
    border: 1px solid;
    margin-bottom: -8px;
    text-align: center;
    height: 85px;
  }
}

@media (min-width:62em) {
  .c4 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

<div
  class="MuiGrid-root c0 MuiGrid-container"
>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 MuiGrid-grid-md-2"
  >
    <div
      class="c1"
    >
      <img
        class="c2"
      />
    </div>
  </div>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 MuiGrid-grid-md-7"
  >
    <div
      class="MuiGrid-root MuiTypography-root MuiTypography-body1 MuiTypography-colorTextPrimary MuiGrid-container"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <p
              class="MuiTypography-root MuiTypography-h5"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root c3"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M13.5.67s.74 2.65.74 4.8c0 2.06-1.35 3.73-3.41 3.73-2.07 0-3.63-1.67-3.63-3.73l.03-.36C5.21 7.51 4 10.62 4 14c0 4.42 3.58 8 8 8s8-3.58 8-8C20 8.61 17.41 3.8 13.5.67zM11.71 19c-1.78 0-3.22-1.4-3.22-3.14 0-1.62 1.05-2.76 2.81-3.12 1.77-.36 3.6-1.21 4.62-2.58.39 1.29.59 2.65.59 4.04 0 2.65-2.15 4.8-4.8 4.8z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        />
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root c4 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-3"
  >
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <span
          class="MuiTypography-root MuiTypography-caption MuiTypography-colorInherit"
        >
          foo
        </span>
      </div>
      <div
        class="c6"
      >
        <span
          class="MuiTypography-root MuiTypography-caption MuiTypography-colorInherit"
        >
          bar
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeadingRow renders correctly without highlight 1`] = `
.c5 {
  border-radius: 1rem;
  padding: 0.2rem 0.75rem;
  background-color: #546e7a;
  margin-right: 0.5rem;
  color: #eceff1;
}

.c5:last-child {
  margin-right: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  line-height: 1;
  margin: 8px 0;
}

.c0 {
  padding: 16px;
  border-bottom: 1px solid;
}

.c1 {
  margin-bottom: 8px;
}

.c2 {
  max-width: 100%;
  max-height: 100%;
  margin: auto;
}

@media (min-width:62em) {
  .c4 {
    margin: 0;
  }
}

@media (min-width:62em) {
  .c0 {
    background-color: transparent;
    padding: 0;
    border-bottom: 0;
  }
}

@media (min-width:62em) {
  .c1 {
    background-color: white;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding: 4px;
    margin-right: 16px;
    margin-left: 12px;
    border: 1px solid;
    margin-bottom: -8px;
    text-align: center;
    height: 85px;
  }
}

@media (min-width:62em) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

<div
  class="MuiGrid-root c0 MuiGrid-container"
>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 MuiGrid-grid-md-2"
  >
    <div
      class="c1"
    >
      <img
        class="c2"
      />
    </div>
  </div>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 MuiGrid-grid-md-7"
  >
    <div
      class="MuiGrid-root MuiTypography-root MuiTypography-body1 MuiTypography-colorTextPrimary MuiGrid-container"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <p
              class="MuiTypography-root MuiTypography-h5"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        />
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root c3 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-3"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <span
          class="MuiTypography-root MuiTypography-caption MuiTypography-colorInherit"
        >
          foo
        </span>
      </div>
      <div
        class="c5"
      >
        <span
          class="MuiTypography-root MuiTypography-caption MuiTypography-colorInherit"
        >
          bar
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductHeading renders correctly 1`] = `
<p
  class="MuiTypography-root MuiTypography-body1"
/>
`;
